--- a/src/launchSettings.json
+++ b/src/launchSettings.json
@@ -4,7 +4,8 @@
       "commandName": "DockerCompose",
       "commandVersion": "1.0",
       "serviceActions": {
-        "spaceweather.sync": "StartDebugging"
+        "spaceweather.sync": "StartDebugging",
+        "spaceweather.bootstrap": "StartDebugging"
       }
     }
   }
