--- a/src/SpaceWeather.Bootstrap/appsettings.json
+++ b/src/SpaceWeather.Bootstrap/appsettings.json
@@ -1,8 +1,9 @@
 ﻿{
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Warning",
+      "Microsoft.Hosting.Lifetime": "Warning",
+      "SpaceWeather": "Information"
     }
   }
 }
